Fix for "+" and "x" sign alignment from sisira

--- a/symfony/web/themes/default/css/jquery/jquery-treeview/jquery.treeview.css
+++ b/symfony/web/themes/default/css/jquery/jquery-treeview/jquery.treeview.css
@@ -68,7 +68,7 @@
 
 .addButton {
     color: #33AC3F;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
 }
 
